--- a/src/assets/styx.scss
+++ b/src/assets/styx.scss
@@ -10,9 +10,10 @@
   justify-content: center;
   align-items: flex-start;
 
-  .txt {
-    padding: 20px;
+  .txtBox{
+    margin-bottom: 20px;
   }
+  
   .joc {
     width: 100vw;
     display: flex;
