--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -7,6 +7,8 @@
 @import "./styx.scss";
 @import "./meduza.scss";
 @import "./poseidon.scss";
+@import "./hefaistos.scss";
+@import "./icarus.scss";
 
 * {
   margin: 0;
@@ -28,7 +30,7 @@ p {
   max-width: 700px;
 }
 .txtBox {
-  max-width: 500px;
+  max-width: 400px;
   padding: 20px;
   align-items: center;
   background: white;
