--- a/src/assets/icarus.scss
+++ b/src/assets/icarus.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     min-height: 100vh;
     display: flex;
-    background: url(../../public/images/Ancient-Greek-City.jpg);
+    background: url(../../public/images/icarus.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
