--- a/src/assets/hermes.scss
+++ b/src/assets/hermes.scss
@@ -1,7 +1,7 @@
 .hermes {
   width: 100vw;
   min-height: 100vh;
-  background: url(../../public/images/ocean.jpg);
+  background: url(../../public/images/1861.jpg);
   background-position: center bottom;
   background-repeat: no-repeat;
   display: flex;
@@ -9,4 +9,65 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+
+  .joc {
+    width: 100vw;
+    height: calc(100vh - 260px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+
+    .down {
+      width: 100vw;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      div {
+        margin: 10px;
+      }
+    }
+
+    .up {
+      width: 100%;
+      height: 80%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      position: relative;
+
+      .cutie {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        height: 100%;
+        align-items: center;
+        padding: 50px;
+        h2{
+            color: $prussian-blue;
+            font-size: 30px;
+            font-weight: 700;
+            font-family: $font;
+        }
+
+        div {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+
+          img {
+            width: 100px;
+            background: white;
+            border-radius: 5px;
+            margin: 10px;
+            height: auto;
+          }
+        }
+      }
+    }
+  }
 }
