--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -124,12 +124,15 @@ p {
     z-index: 9999;
     background: $cadet-grey;
     min-height: 100vh;
+    transition: 0.4s ease-in-out;
 
     p {
       font-family: $font;
       margin-top: 80px;
       color: white;
+      width: 380px;
     }
+
   }
 }
 
