--- a/src/assets/icarus.scss
+++ b/src/assets/icarus.scss
@@ -1,6 +1,6 @@
 .icarus {
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   background: url(../../public/images/icarus.jpg);
   background-position: center;
